--- a/grid/package.json
+++ b/grid/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "@ekinox/cetera": "file:../cetera",
-    "canvas-sketch": "^0.7.4",
-    "canvas-sketch-util": "^1.10.0"
+    "canvas-sketch": "^0.7.4"
   }
 }
